django-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-deployment
spec:
  selector:
    matchLabels:
      app: django-server
  template:
    metadata:
      labels:
        app: django-server
    spec:
      containers:
        - name: django
          image: eshinanase/django_app:latest
          ports:
            - containerPort: 80
