django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-server
  ports:
    - protocol: TCP
      port: 80
