ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: django-ingress
   labels:
     app: django-server
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-server
  ports:
    - protocol: TCP
      port: 80
